# masterofgames

./: .env  .env.example  .gitignore  Dockerfile  Pipfile  README.md  config.py  docker-compose.yaml  fixtures.py  gunicorn.conf.py  manage.py  model_v1.py  pyproject.toml  repository.py  requests_mock.py  requirements.txt  service.py  steam_api.py  test_service.py  test_steam_api.py  test_transformer.py  transformer.py
.github/: main.workflow
.github/workflows/: python.yml
action-test/: Dockerfile  entrypoint.sh
api/: achievements.py  homepage.py  profile.py
core/: config.py
crawlers/: base.py  player.py  repository.py  stats.py  user.py
crud/: achievement.py  profile.py
masterofgames/: client.py  config.py  controllers.py  entities.py  manage.py  repository.py  service.py  services.py  transformer.py  web.py
masterofgames/api/: achievements.py  profile.py
masterofgames/crawlers/: base.py  player.py  stats.py  user.py
masterofgames/crud/: achievement.py  profile.py
models/: model.py
src/api/: achievements.py  profile.py
src/crawlers/: base.py  player.py  stats.py  user.py
src/crud/: achievement.py  profile.py
src/models/: model.py
static/css/: datatables.min.css
static/js/: datatables.min.js
templates/: achievements.html  error.html  index.html  layout.html  profile.html
tests/: fixtures.py  test_service.py
