[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterofgames"
version = "4.0"
description = "Helps you get all the achievements from your games"
license = {text = "OSL-3.0"}
authors = [{name = "Saphyel"}]

requires-python = ">=3.11"
dependencies = [
    "Flask[async]<2.4",
    "pydantic<1.11",
    "gunicorn[eventlet]<21.3",
    "httpx<0.26",
    "uvicorn<0.24",
]
[project.optional-dependencies]
test = [
    "black<23.10",
    "pytest<7.5",
    "pytest-asyncio<0.22"
]
[tool.setuptools.packages.find]
include = ["masterofgames"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
cache_dir = "/tmp/cache"
