[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "masterofgames"
version = "5.1"
description = "Helps you get all the achievements from your games"
license = {text = "OSL-3.0"}
authors = [{name = "Saphyel"}]

requires-python = ">=3.11"
dependencies = [
    "httpx<0.29",
    "litestar[jinja]<2.16",
    "pydantic-settings<2.9",
    "uvicorn[standard]<0.35",
]
[project.optional-dependencies]
test = [
    "mypy<1.16",
    "pytest-asyncio<0.27",
    "coverage<7.9",
    "pytest<8.4",
    "ruff<0.12",
]
[tool.setuptools.packages.find]
include = ["masterofgames"]
[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[lint]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
select = ["F", "E", "W", "I001", "F401"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[lint.mccabe]
max-complexity = 10

[tool.ruff]
line-length = 120
exclude = ["build"]

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
follow_imports = "skip"
strict_optional = true
exclude = [
    "^build/"
]

[tool.pytest.ini_options]
cache_dir = "/tmp/cache"

[tool.coverage.run]
source = ["masterofgames"]
branch = true
command_line="-m pytest"
omit = [
 "web.py",
 "controllers.py",
]
data_file="/tmp/.coverage"
[tool.coverage.report]
skip_empty = true
show_missing = true
